--- a/urbanstory/src/css/sass/components-global/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-global/_ats-header.scss
@@ -6,9 +6,13 @@
     -webkit-box-align : center;
     align-items       : center;
     @include box-shadow(0 0 0 1px rgba(0,0,0,0.1));
+
+    img{
+        max-height: 70px;
+        width: 60%;
+        margin-top:5px;
+    }
 }
-
-
 
 .flex{ @include flexbox }
 
@@ -20,6 +24,7 @@
     -webkit-box-align : center;
     align-items       : center;
     height            : 50px;
+    margin-left       : -100px;
 
     ul{
         display        : flex;
@@ -39,7 +44,7 @@
                 color: $c-grey-7; 
                 cursor: pointer;
                 position: relative;
-
+            
                 &:before {
                     @include radius;
                     transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
@@ -52,6 +57,7 @@
                     position: absolute;
                     left: 0;
                     right: 0;
+                    margin: 32px auto 0px;
                 }
                 &:hover {
                     cursor: pointer;
@@ -63,9 +69,7 @@
             }
             a.active {
                 color: $c-firm-1;
-                &:before {
-                    width: 100%;
-                }
+                &:before { width: 100% }
             }
 
             .icon-coin{ color: $c-yellow-1 }
@@ -104,41 +108,36 @@
     @include radius;
 }
 
-.ats-menu-button span:nth-child(1) { top: 4px }
+.ats-menu-button span:nth-child(1) { top: 5px }
 
 .ats-menu-button span:nth-child(2) { top: 10px }
 
 .ats-menu-button span:nth-child(3) { top: 16px }
 
-@media (max-width: 1167px){
+@media (max-width: 1230px){
     .ats-menu-button{ margin-bottom: 25px }
 
-    .card-header { 	box-shadow: 0 10px 20px 0 rgba(0,0,0,0.1) }
+    .card-header {  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.1) }
 
     .left-side { display: none }
 
     .ats-nav-content{ justify-content: flex-end }
     
     .right-side ul li:nth-child(1) , .right-side ul li:nth-child(4) { display: none }
+    
 }
 
 li.has-children {
     color: $c-firm-1;
-    &:after {
-        content: '\e003';
-        margin-right: 10px;
-        margin-left: -10px;
-        padding: 0;
-        font-size: 0.725em;
-        column-rule: $c-firm-1;
-    }
+    position: relative;
+
     ul {
         width: 200px;
         position: absolute;
         z-index: 4;
         display: none;
         background: #ffffff;
-        top: 81px;
+        top: 35px;
         border-top: solid 1px #ddd;
         -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
         -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
@@ -149,17 +148,13 @@ li.has-children {
             display: block;
             float: none;
             width: 100%;
+            &:hover { background: #f5f5f5 }
+            &:active { background: #f5f5f5 }
             a {
                 display: block;
                 line-height: 1em;
                 padding-top: 15px;
                 padding-bottom: 15px;
-                &:hover {
-                    background: #f5f5f5;
-                }
-                &:active {
-                    background: #f5f5f5;
-                }
                 &:before {
                     display: none;
                 }
@@ -173,11 +168,33 @@ li.has-children.is-active {
     }
 }
 
+.ats-menu-button.menu-button-active{
+    span:nth-child(1){ left : -5px;}
+    span:nth-child(3){ left : 5px;}
+}
+
+// .ats-nav-content.ats-nav-content-active{
+//     right: 0;
+//     opacity: 1;
+// }
 
 
+// .ats-menu-wrapper.menu-wrapper-active{
+//     position: absolute;
+//     display: block;
+// }
 
-
-
+// .ats-menu-wrapper{
+//     display: block;
+//     z-index: 100;
+//     position: fixed;
+//     background: #fff;
+//     width: 250px;
+//     //right: 0;
+//     height: calc(100vh - 50px);
+//     transition: all .25s ease-in-out;
+//     overflow-y: scroll;
+// }
 
 
 
