--- a/urbanstory/src/css/sass/components-global/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-global/_ats-header.scss
@@ -9,7 +9,7 @@
 
     img{
         max-height: 70px;
-        width: 60%;
+        width: 50%;
         margin-top:5px;
     }
 }
@@ -24,7 +24,7 @@
     -webkit-box-align : center;
     align-items       : center;
     height            : 50px;
-    margin-left       : -100px;
+    margin-left       : -120px;
 
     ul{
         display        : flex;
@@ -65,11 +65,11 @@
                     &:before {
                         width: 100%;
                     }
+                }
+                &.active {
+                    color: $c-firm-1;
+                    &:before { width: 100% }
                 }  
-            }
-            a.active {
-                color: $c-firm-1;
-                &:before { width: 100% }
             }
 
             .icon-coin{ color: $c-yellow-1 }
@@ -108,13 +108,14 @@
     @include radius;
 }
 
-.ats-menu-button span:nth-child(1) { top: 5px }
+.ats-menu-button span:nth-child(1) { top: 4px }
 
 .ats-menu-button span:nth-child(2) { top: 10px }
 
 .ats-menu-button span:nth-child(3) { top: 16px }
 
 @media (max-width: 1230px){
+    .card-header { padding : 0 10px }
     .ats-menu-button{ margin-bottom: 25px }
 
     .card-header {  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.1) }
@@ -149,7 +150,7 @@ li.has-children {
             float: none;
             width: 100%;
             &:hover { background: #f5f5f5 }
-            &:active { background: #f5f5f5 }
+            &:active { background: #f5f5f5;}
             a {
                 display: block;
                 line-height: 1em;
@@ -173,28 +174,30 @@ li.has-children.is-active {
     span:nth-child(3){ left : 5px;}
 }
 
-// .ats-nav-content.ats-nav-content-active{
-//     right: 0;
-//     opacity: 1;
+
+
+
+// .menu-icon-active{
+    
+//     &:hover{
+//     transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
+//     content: "";
+//     width: 40px;
+//     height: 40px;
+//     background: $c-firm-1; 
+//     -moz-border-radius: 20px; 
+//     -webkit-border-radius: 20px; 
+//     opacity: 0.5 ;
+//     border-radius: 20px;
+//     background: $c-firm-1;
+//     }
+
+//     // &:hover {
+//     //     cursor: pointer;
+//     //     color: $c-firm-1;
+//     //     a:before {
+//     //         width: 100%;
+//     //     }
+//     // } 
 // }
-
-
-// .ats-menu-wrapper.menu-wrapper-active{
-//     position: absolute;
-//     display: block;
-// }
-
-// .ats-menu-wrapper{
-//     display: block;
-//     z-index: 100;
-//     position: fixed;
-//     background: #fff;
-//     width: 250px;
-//     //right: 0;
-//     height: calc(100vh - 50px);
-//     transition: all .25s ease-in-out;
-//     overflow-y: scroll;
-// }
-
-
 
