--- a/urbanstory/src/css/sass/components-global/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-global/_ats-header.scss
@@ -1,14 +1,15 @@
+
 .card-header{
     background        : $c-white;
-    height            : 50px;
-    padding           : 0 25px;
+    height            : $ats-header-height;
+    padding           : 0 $gutter-xl;
     -ms-flex-align    : center;
     -webkit-box-align : center;
     align-items       : center;
     @include box-shadow(0 0 0 1px rgba(0,0,0,0.1));
 
     img{
-        max-height: 70px;
+        max-height: $ats-header-height;
         width: 50%;
         margin-top:5px;
     }
@@ -23,7 +24,7 @@
     -ms-flex-align    : center;
     -webkit-box-align : center;
     align-items       : center;
-    height            : 50px;
+    height            : $ats-header-height;
     margin-left       : -120px;
 
     ul{
@@ -34,30 +35,39 @@
         -ms-flex-align    : center;
         -webkit-box-align : center;
         align-items       : center;
+        
 
         li{
             display    : inline-block;
-            padding    : 0 15px;
+            padding    : 0;
             font-size  : 0.875rem;
             
+            
             a { 
-                color: $c-grey-7; 
+                color: $c-grey-5; 
                 cursor: pointer;
+                // outline: solid 1px red;
                 position: relative;
+                display: inline-flex;
+                height: $ats-header-height;
+                line-height:$ats-header-height;
+                padding: 0 $gutter-l;
             
                 &:before {
                     @include radius;
-                    transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
+                    transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.25s;
                     content: "";
                     background: $c-firm-1;
                     width: 0%;
                     height: 3px;
                     display: inline-block;
-                    margin-top: 32px;
+                    // margin-top: 32px;
                     position: absolute;
                     left: 0;
                     right: 0;
-                    margin: 32px auto 0px;
+                    bottom: 0;
+                    margin: 0 auto;
+                    opacity: .5;
                 }
                 &:hover {
                     cursor: pointer;
@@ -68,7 +78,10 @@
                 }
                 &.active {
                     color: $c-firm-1;
-                    &:before { width: 100% }
+                    &:before {
+                        width: 100%;
+                        opacity: 1;
+                    }
                 }  
             }
 
@@ -82,13 +95,92 @@
                 text-overflow: ellipsis; 
             }
 
-            .company-name{ width: 150px }
+            .company-name{ 
+                width: $ats-header-height * 3;
+            }
 
-            .coin-amt{ width:35px }
+            .coin-amt{
+                width:35px
+            }
+
+            &.has-icon{
+                padding:0;
+                a{
+                    display: inline-flex;
+                    height: $ats-header-height;
+                    padding: 0 $gutter-m;
+                    
+                    position: relative;
+                    i{
+                        
+                        display:block;
+                        width: 40px;
+                        height: 100%;
+                        text-align: center;
+                        vertical-align: middle;
+                    }
+                    &:after{
+                        content: "";
+                        background: rgba($c-firm-1, .05);
+                        width:40px;
+                        height: 40px;
+                        @include border-radius(20px);
+                        display: block;
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: 0;
+                        bottom: 0;
+                        margin: auto ;
+                        visibility: hidden;
+                        // transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
+                    }
+                    &:hover{
+                        &:after{
+                            visibility:visible;
+                        }
+                    }
+
+                    &.active {
+                        &:after {
+                            visibility:visible;  
+                        }
+                    }
+                }
+            }
+
         }
     }
 }
-
+.menu-drawer{
+    outline: solid 1px red;
+    height: $ats-header-height;
+    width: $ats-header-height;
+    span{
+        display: block;
+        width: 40px;
+        height: 40px;
+        outline: solid 1px red;
+        position: relative;
+        &:before,
+        &:after{
+            position: absolute;
+            display: block;
+            content: '';
+            background: red;
+            width: 40px;
+            height: 2px;
+            left:0;
+            right:0;
+        }
+        &:before{
+            top:0;
+        }
+        &:after{
+            bottom: 0;
+        }
+    }
+}
 .ats-menu-button{
     position: relative;
     cursor: pointer;
@@ -105,14 +197,15 @@
     height: 2px;
     margin: auto;
     background: $c-grey-6;
+    outline: solid 1px red;
     @include radius;
 }
 
-.ats-menu-button span:nth-child(1) { top: 4px }
+// .ats-menu-button span:nth-child(1) { top: 4px }
 
-.ats-menu-button span:nth-child(2) { top: 10px }
+// .ats-menu-button span:nth-child(2) { top: 10px }
 
-.ats-menu-button span:nth-child(3) { top: 16px }
+// .ats-menu-button span:nth-child(3) { top: 16px }
 
 @media (max-width: 1230px){
     .card-header { padding : 0 10px }
@@ -127,7 +220,6 @@
     .right-side ul li:nth-child(1) , .right-side ul li:nth-child(4) { display: none }
     
 }
-
 li.has-children {
     color: $c-firm-1;
     position: relative;
@@ -138,7 +230,7 @@ li.has-children {
         z-index: 4;
         display: none;
         background: #ffffff;
-        top: 35px;
+        // top: 35px;
         border-top: solid 1px #ddd;
         -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
         -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
@@ -160,6 +252,7 @@ li.has-children {
                     display: none;
                 }
             }
+            
         }
     }
 }
@@ -175,29 +268,81 @@ li.has-children.is-active {
 }
 
 
+li .menu-icon{
+    width:40px;
+    height: 40px;
+    position: relative;
+    vertical-align: middle;
+    text-align: center;
+    padding: 0;
+
+    a{
+        //top: 12px;
+    }
+
+    &:before {
+        display: none;
+    }
+    &:after {    
+        content: "";
+        background: rgba($c-firm-1, .5);
+        width:40px;
+        height: 40px;
+        @include border-radius(20px);
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+
+        
+    }
+    &:hover {
+        cursor: pointer;
+        color: $c-firm-1;
+        &:before {
+            transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
+            width: 40px;
+            height: 40px;
+            background: darken(rgba(0,0,0,0.1), 30);
+        }
+    }
+    &.active {
+        color: $c-firm-1;
+        &:before { width: 40px;
+            height: 40px;
+            background: darken(rgba(0,0,0,0.1), 30);
+            display: block; 
+            }
+    }  
+}
 
 
 // .menu-icon-active{
     
 //     &:hover{
-//     transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
-//     content: "";
-//     width: 40px;
-//     height: 40px;
-//     background: $c-firm-1; 
-//     -moz-border-radius: 20px; 
-//     -webkit-border-radius: 20px; 
-//     opacity: 0.5 ;
-//     border-radius: 20px;
-//     background: $c-firm-1;
+//         &::before{
+//             transition: cubic-bezier(0.71, 0.14, 0.23, 1.01) 0.35s;
+//             content: "";
+//             width: 40px;
+//             height: 40px;
+//             background: $c-firm-1; 
+//             -moz-border-radius: 20px; 
+//             -webkit-border-radius: 20px; 
+//             opacity: 0.5 ;
+//             border-radius: 20px;
+//             background: $c-firm-1;
+//         }
 //     }
 
-//     // &:hover {
-//     //     cursor: pointer;
-//     //     color: $c-firm-1;
-//     //     a:before {
-//     //         width: 100%;
-//     //     }
-//     // } 
-// }
+    // &:hover {
+    //     cursor: pointer;
+    //     color: $c-firm-1;
+    //     a:before {
+    //         width: 100%;
+    //     }
+    // } 
+
 
