--- a/urbanstory/src/css/sass/global/_variables.scss
+++ b/urbanstory/src/css/sass/global/_variables.scss
@@ -52,6 +52,11 @@ $gutter-s: 4px;
 $font-stack: "Barlow", Arial, sans-serif;
 $font-icon: urbanfont;
 
+
+
+//customs
+$ats-header-height: 50px;
+
 $icon-size: 14px;
 
 $br-height: 18px; // breadcrumb height
