--- a/urbanstory/src/css/sass/global/_variables.scss
+++ b/urbanstory/src/css/sass/global/_variables.scss
@@ -53,6 +53,10 @@ $font-stack: "Barlow", Arial, sans-serif;
 $font-icon: urbanfont;
 
 
+$screen-s: 48em; // 768
+$screen-md: 62em; // 992
+$screen-lg: 75em; // 1200
+
 
 //customs
 $ats-header-height: 50px;
