--- a/urbanstory/src/css/sass/components-global/_ats-header.scss
+++ b/urbanstory/src/css/sass/components-global/_ats-header.scss
@@ -152,7 +152,17 @@
                 }
             }
 
+            &.ats-company{
+                a{
+                    &:before{
+                        display: none;
+                    }
+                }
+            }
+
         }
+
+
     }
 }
 .menu-drawer{
