--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2439,6 +2439,9 @@ input[type=checkbox]:focus {
 .ats-nav-content ul li.has-icon a.active:after {
   visibility: visible;
 }
+.ats-nav-content ul li.ats-company a:before {
+  display: none;
+}
 
 .menu-drawer {
   height: 50px;
